gitlab/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
    # ingress.kubernetes.io/body-size: 200m
    # ingress.kubernetes.io/affinity: "true"
    # ingress.kubernetes.io/session-cookie-name: "fuckoff"
    # ingress.kubernetes.io/upstream-fail-timeout: "30"
    # ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
